--- a/src/components/CreateTodoButton/index.css
+++ b/src/components/CreateTodoButton/index.css
@@ -1,26 +1,32 @@
 .CreateTodoButton {
-    background-color: #61DAFA;
-    box-shadow: 0px 5px 25px rgba(97, 218, 250, 0.5);
+    background-color: darkblue;
     border: none;
     border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
     cursor: pointer;
-    font-size: 50px;
+    font-size: 20px;
     position: fixed;
     bottom: 24px;
     right: 24px;
     font-weight: bold;
-    color: #FAFAFA;
+    color: #FFF;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 64px;
-    width: 64px;
-  
-    transform: rotate(0);
-    transition: .3s ease;
     z-index: 1;
+    transition: .3s ease;
+
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,.2),
+                0px 1px 1px 0px rgba(0,0,0,.14),
+                0px 3px 3px -1px rgba(0,0,0,.12);
 }
   
 .CreateTodoButton:hover {
-    transform: rotate(224deg);
+    width: 60px;
+    height: 60px;
+    font-size: 25px;
+    bottom: 20px;
+    right: 20px;
 }
