--- a/src/components/TodoForm/TodoForm.css
+++ b/src/components/TodoForm/TodoForm.css
@@ -7,6 +7,7 @@ form {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  border-radius: 20px;
 }
 
 label {
@@ -19,8 +20,8 @@ label {
 
 textarea {
   background-color: #f9fbfc;
-  border: 2px solid #202329;
-  border-radius: 2px;
+  border: 2px solid darkblue;
+  border-radius: 10px;
   box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.25);
   color: #1e1e1f;
   font-size: 20px;
@@ -37,7 +38,7 @@ textarea::placeholder {
 }
 
 textarea:focus {
-  outline-color: #61dafa;
+  outline-color: darkblue;
 }
 
 .TodoForm-buttonContainer {
@@ -51,21 +52,33 @@ textarea:focus {
 .TodoForm-button {
   cursor: pointer;
   display: inline-block;
-  font-size: 20px;
-  color: #202329;
+  font-size: 16px;
   font-weight: 400;
   width: 120px;
-  height: 48px;
-  border-radius: 2px;
+  height: 46px;
   border: none;
   font-family: "Montserrat";
+  border-radius: 50px;
 }
 
 .TodoForm-button--add {
-  background: #61dafa;
+  background: darkblue;
+  color: #FFF;
   box-shadow: 0px 5px 25px rgba(97, 218, 250, 0.5);
 }
 
 .TodoForm-button--cancel {
   background: transparent;
+  color: darkblue;
+  border: 1px solid darkblue;
+}
+
+.TodoForm-button--cancel:hover {
+  background: red;
+  color: #FFF;
+  border: 1px solid red;
+}
+
+.fa--form {
+  margin-right: 8px;
 }
