--- a/src/components/TodoItem/index.css
+++ b/src/components/TodoItem/index.css
@@ -5,7 +5,9 @@
   justify-content: center;
   align-items: center;
   margin-top: 15px;
-  box-shadow: 0px 5px 50px rgba(32, 35, 41, 0.15);
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,.2),
+                  0px 1px 1px 0px rgba(0,0,0,.14),
+                  0px 3px 3px -1px rgba(0,0,0,.12);
   border-radius: 50px;
 }
 
@@ -30,6 +32,10 @@
   font-size: 18px;
   font-weight: bold;
   /* background-color: #CCC; */
+}
+
+.fe-check {
+  color: darkblue;
 }
 
 .fa-check--active {
