--- a/src/components/TodoSearch/TodoSearch.css
+++ b/src/components/TodoSearch/TodoSearch.css
@@ -11,13 +11,16 @@
     border-radius: 25px;
     border: 4px solid white;
     padding: 5px;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,.2),
+                0px 1px 1px 0px rgba(0,0,0,.14),
+                0px 3px 3px -1px rgba(0,0,0,.12);
 }
 
 .TodoSearch {
     position: absolute;
     top: 0;
     left: 0;
-    width: 96%;
+    width: 85%;
     height: 42.5px;
     line-height: 30px;
     outline: 0;
@@ -25,7 +28,7 @@
     display: none;
     font-size: 1em;
     border-radius: 20px;
-    padding-inline: 2%;
+    padding-left: 20px;
 }
 
 .fa-search {
@@ -37,27 +40,29 @@
     top: 0;
     right: 0;
     border-radius: 50%;
-    color: #61DAFA;
+    color: darkblue;
     text-align: center;
     font-size: 1.2em;
     transition: all 1s;
 }
 
 .containerTodoSearch:hover,
-.containerTodoSearch:valid {
+.containerTodoSearch:valid,
+.containerTodoSearch:has(.TodoSearch:not(:placeholder-shown)) {
     width: 100%;
     cursor: pointer;
 }
 
 .containerTodoSearch:hover .TodoSearch,
-.containerTodoSearch:valid .TodoSearch {
+.containerTodoSearch:valid .TodoSearch,
+.TodoSearch:not(:placeholder-shown){
     display: block;
 }
 
 .containerTodoSearch:hover .fa,
 .containerTodoSearch:valid .fa {
-    background: #61DAFA;
-    color: white;
+    background: darkblue;
+    color: #FFF;
 }
 
 .containerTodoSearch:disabled {
