--- a/src/components/ChangeAlert/notification.css
+++ b/src/components/ChangeAlert/notification.css
@@ -1,4 +1,14 @@
  
+  .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #1e1e1f50;
+    z-index: 2;
+  }
+  
   .rectangle {
     display: flex;
     align-items: center;
